<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.NutroSignUpActivity">

    <TextView
        android:id="@+id/textNutroMain_id"
        android:layout_width="95dp"
        android:layout_height="38dp"
        android:textColor="@color/color_black"
        android:textAllCaps="false"
        android:text="@string/text_nutro"
        android:textSize="32sp"
        android:fontFamily="@font/sans_medium"
        android:layout_marginStart="41dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/textNutroSub_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textNutroSub_id"
        android:layout_width="236dp"
        android:layout_height="76dp"
        android:textSize="13sp"
        android:fontFamily="@font/sans_regular"
        android:text="@string/on_boarding_text"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        android:layout_marginTop="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/cardView_id"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp_id"
        app:layout_constraintTop_toBottomOf="@+id/textNutroMain_id" />

    <Button
        android:id="@+id/buttonSignUp_id"
        android:layout_width="197dp"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:fontFamily="@font/sans_medium"
        android:background="@drawable/bg_rounded_button"
        android:layout_marginTop="280dp"
        android:layout_marginStart="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNutroSub_id"
        app:layout_constraintBottom_toTopOf="@+id/textAccount_id" />

    <TextView
        android:id="@+id/textAccount_id"
        android:layout_width="164dp"
        android:layout_height="39dp"
        android:textColor="#9EA9B1"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:fontFamily="@font/sans_regular"
        android:textAlignment="textStart"
        android:text="@string/already_have_an_naccount"
        android:layout_marginTop="60dp"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp_id" />




    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_id"
        android:layout_width="100dp"
        android:layout_height="687dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_signup_white_rounded_corner"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrant_signUp_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/viewSignUp_yellow_id"
                android:layout_width="60dp"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_signup_yellow_rounded_corner"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>