<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".profilelula_social_03.ProfileLulaActivity">

    <include
        android:id="@+id/includelayout_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        layout="@layout/custom_toolbar_long"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_profile_lua_long_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="56dp"

        android:gravity="center"
        android:text="@string/lula_long"
        android:textAllCaps="false"
        android:textColor="@color/color_black"
        android:textSize="24sp"
        app:fontFamily="@font/sans_medium"
        app:layout_constraintBottom_toTopOf="@+id/image_profile_lula_long_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/image_profile_lula_long_id"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:src="@drawable/image_circle_profile_long"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/color_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile_lua_long_id"
        app:layout_constraintBottom_toTopOf="@+id/constraint_all_button_id" />


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/bg_add_id"
        android:background="@drawable/bg_circle_button"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="16dp"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/constraint_all_button_id" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_all_button_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/text_recipes_id"
        app:layout_constraintTop_toBottomOf="@+id/image_profile_lula_long_id">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_all_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cornerRadius="14dp"
            app:backgroundTint="@color/color_bg_button_onboarding"
            android:text="@string/all"
            android:padding="4dp"
            android:layout_marginRight="12dp"

            android:textSize="14sp"
            app:fontFamily="@font/sans_medium"
            android:textColor="@color/color_white"
            android:gravity="center"
            android:textAllCaps="false"
            app:layout_constraintRight_toLeftOf="@+id/button_sweets_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/button_sweets_id" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sweets_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sweet"
            app:cornerRadius="14dp"
            android:padding="4dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/color_or_text"
            app:fontFamily="@font/sans_medium"
            app:backgroundTint="@color/color_alice_blue"
            android:textSize="14sp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            app:layout_constraintRight_toLeftOf="@+id/button_fruits_id"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/button_all_id"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_fruits_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fruits"
            app:cornerRadius="14dp"
            android:padding="4dp"
            android:gravity="center"
            android:textAllCaps="false"


            android:layout_marginRight="12dp"


            android:textColor="@color/color_or_text"
            app:fontFamily="@font/sans_medium"
            app:backgroundTint="@color/color_alice_blue"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@+id/button_sweets_id"
            app:layout_constraintRight_toLeftOf="@+id/button_veg_id"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_veg_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cornerRadius="14dp"
            android:text="@string/veg"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/color_or_text"
            app:fontFamily="@font/sans_medium"
            app:backgroundTint="@color/color_alice_blue"
            android:textSize="14sp"
            android:padding="4dp"
            android:layout_marginLeft="12dp"

            app:layout_constraintLeft_toRightOf="@+id/button_fruits_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_recipes_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/sans_medium"
        android:text="@string/recipes"
        android:textAllCaps="false"
        android:textColor="@color/color_black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/recycler_lula_long_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraint_all_button_id" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_lula_long_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_recipes_id">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>