<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_login_bg"
    tools:context=".login.LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_welcome_login_continue_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/image_welcome_login_image_id">

        <ImageView
            android:id="@+id/image_welcome_login_arrow_left_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/text_welcome_login_to_continue_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sans_medium"
            android:gravity="center"
            android:text="@string/welcome_n_login_to_continue"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="23sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/image_welcome_login_image_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome_login_image"
        android:layout_marginEnd="70.4dp"
        android:layout_marginStart="63.4dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/constraint_welcome_login_continue_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editText_enter_your_email_id"/>

    <EditText
        android:id="@+id/editText_enter_your_email_id"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_welcome_login_continue"
        android:hint="@string/enter_your_email"
        android:textAllCaps="false"
        android:padding="15dp"
        android:textSize="17sp"
        android:fontFamily="@font/sans_regular"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_welcome_login_image_id"
        app:layout_constraintBottom_toTopOf="@+id/editText_enter_your_password_id"/>


    <EditText
        android:id="@+id/editText_enter_your_password_id"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:padding="15dp"
        android:hint="@string/password"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_welcome_login_continue"
        android:textSize="17sp"
        android:fontFamily="@font/sans_regular"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_enter_your_email_id"
        app:layout_constraintBottom_toTopOf="@+id/button_login_id" />


    <Button
        android:id="@+id/button_login_id"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_welcome_login_continue"
        android:textSize="17sp"
        android:fontFamily="@font/sans_medium"
        android:textAllCaps="false"
        android:textColor="@color/color_black"
        android:text="Login"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textForgotPass_id"
        app:layout_constraintTop_toBottomOf="@+id/editText_enter_your_password_id" />
    
    <TextView
        android:id="@+id/textForgotPass_id"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/color_black"
        android:fontFamily="@font/sans_regular"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login_id" />







</androidx.constraintlayout.widget.ConstraintLayout>